VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc18Down.err
[8MB/455MB][  1%][>                                                 ][2.667MB/s]  [16MB/455MB][  3%][=>                                                ][4MB/s]  [24MB/455MB][  5%][==>                                               ][4MB/s]  [32MB/455MB][  7%][===>                                              ][4.571MB/s]  [40MB/455MB][  8%][====>                                             ][5MB/s]  [48MB/455MB][ 10%][=====>                                            ][4.8MB/s]  [56MB/455MB][ 12%][======>                                           ][5.091MB/s]  [64MB/455MB][ 14%][=======>                                          ][4.923MB/s]  [72MB/455MB][ 15%][=======>                                          ][5.143MB/s]  [80MB/455MB][ 17%][========>                                         ][5.333MB/s]  [88MB/455MB][ 19%][=========>                                        ][5.176MB/s]  [96MB/455MB][ 21%][==========>                                       ][5.333MB/s]  [104MB/455MB][ 22%][===========>                                      ][5.2MB/s]  [112MB/455MB][ 24%][============>                                     ][5.333MB/s]  [120MB/455MB][ 26%][=============>                                    ][5.217MB/s]  [128MB/455MB][ 28%][==============>                                   ][5.12MB/s]  [136MB/455MB][ 29%][==============>                                   ][4.857MB/s]  [144MB/455MB][ 31%][===============>                                  ][4.8MB/s]  [152MB/455MB][ 33%][================>                                 ][4.75MB/s]  [160MB/455MB][ 35%][=================>                                ][4.706MB/s]  [168MB/455MB][ 36%][==================>                               ][4.667MB/s]  [176MB/455MB][ 38%][===================>                              ][4.513MB/s]  [184MB/455MB][ 40%][====================>                             ][4.381MB/s]  [192MB/455MB][ 42%][=====================>                            ][4.267MB/s]  [200MB/455MB][ 43%][=====================>                            ][4.167MB/s]  [208MB/455MB][ 45%][======================>                           ][4.16MB/s]  [216MB/455MB][ 47%][=======================>                          ][4.075MB/s]  [224MB/455MB][ 49%][========================>                         ][4.073MB/s]  [232MB/455MB][ 50%][=========================>                        ][4MB/s]  [240MB/455MB][ 52%][==========================>                       ][3.871MB/s]  [248MB/455MB][ 54%][===========================>                      ][3.758MB/s]  [256MB/455MB][ 56%][============================>                     ][3.71MB/s]  [264MB/455MB][ 58%][=============================>                    ][3.616MB/s]  [272MB/455MB][ 59%][=============================>                    ][3.532MB/s]  [280MB/455MB][ 61%][==============================>                   ][3.373MB/s]  [288MB/455MB][ 63%][===============================>                  ][3.13MB/s]  [296MB/455MB][ 65%][================================>                 ][3.02MB/s]  [304MB/455MB][ 66%][=================================>                ][2.951MB/s]  [312MB/455MB][ 68%][==================================>               ][2.862MB/s]  [320MB/455MB][ 70%][===================================>              ][2.832MB/s]  [328MB/455MB][ 72%][====================================>             ][2.733MB/s]  [336MB/455MB][ 73%][====================================>             ][2.625MB/s]  [344MB/455MB][ 75%][=====================================>            ][2.548MB/s]  [352MB/455MB][ 77%][======================================>           ][2.514MB/s]  [360MB/455MB][ 79%][=======================================>          ][2.5MB/s]  [368MB/455MB][ 80%][========================================>         ][2.503MB/s]  [376MB/455MB][ 82%][=========================================>        ][2.49MB/s]  [384MB/455MB][ 84%][==========================================>       ][2.477MB/s]  [392MB/455MB][ 86%][===========================================>      ][2.45MB/s]  [400MB/455MB][ 87%][===========================================>      ][2.41MB/s]  [408MB/455MB][ 89%][============================================>     ][2.4MB/s]  [416MB/455MB][ 91%][=============================================>    ][2.364MB/s]  [424MB/455MB][ 93%][==============================================>   ][2.343MB/s]  [432MB/455MB][ 94%][===============================================>  ][2.323MB/s]  [440MB/455MB][ 96%][================================================> ][2.256MB/s]  [448MB/455MB][ 98%][=================================================>][2.24MB/s]  [455MB/455MB][100%][==================================================][2.242MB/s]  [455MB/455MB][100%][==================================================][2.231MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_60702/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_60702/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
